sdk/cosmosdb/cosmos/samples/v3/javascript/README.md
---
page_type: sample
languages:
  - javascript
products:
  - azure-cosmos-db
urlFragment: cosmos-javascript
---

# Azure Cosmos DB client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for Azure Cosmos DB in some common scenarios.

| **File Name**                                                                                                     | **Description**                                                                                     |
| ----------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------- |
| [AADAuth.js][aadauth]                                                                                             | Uses AAD credentials to authenticate with the CosmosClient.                                         |
| [AlterQueryThroughput.js][alterquerythroughput]                                                                   | Updates a container offer to change query throughput.                                               |
| [Bulk.js][bulk]                                                                                                   | Shows a simple bulk call with each BulkOperation type.                                              |
| [BulkUpdateWithSproc.js][bulkupdatewithsproc]                                                                     | Bulk Updates documents with a Stored Procedure. Prefer `container.items().bulk()` to this behavior. |
| [ChangeFeed.js][changefeed]                                                                                       | Demonstrates using a ChangeFeed.                                                                    |
| [ContainerManagement.js][containermanagement]                                                                     | Demonstrates container create, read, delete and reading all containers belonging to a database.     |
| [DatabaseManagement.js][databasemanagement]                                                                       | Demonstrates database create, read, delete and reading all databases.                               |
| [Diagnostics.js][diagnostics]                                                                                     | Demonstrates usage of CosmosDiagnostic Object.                                                      |
| [HierarchicalPartitioning.js][hierarchicalpartitioning]                                                           | Shows various operations on containers with Hierarchical Partitioning.                              |
| [IndexManagement.js][indexmanagement]                                                                             | Shows various ways to manage indexing items or changing container index policies.                   |
| [ItemManagement.js][itemmanagement]                                                                               | Demonstrates item creation, read, delete and reading all items belonging to a container.            |
| [QueryThroughput.js][querythroughput]                                                                             | Demonstrates query throughput scenarios.                                                            |
| [SasTokenAuth.js][sastokenauth]                                                                                   | Demonstrates using SasTokens for granting scoped access to Cosmos resources. _Private feature_      |
| [ServerSideScripts.js][serversidescripts]                                                                         | Demonstrates using stored procedures for server side run functions                                  |
| [ChangeFeedIterator\ChangeFeedHierarchicalPartitionKey.js][changefeediterator_changefeedhierarchicalpartitionkey] | Demonstrates using a ChangeFeed for a partition key                                                 |
| [ChangeFeedIterator\ChangeFeedIteratorEntireContainer.js][changefeediterator_changefeediteratorentirecontainer]   | Demonstrates using a ChangeFeed for entire container                                                |
| [ChangeFeedIterator\ChangeFeedIteratorEpkRange.js][changefeediterator_changefeediteratorepkrange]                 | Demonstrates using a ChangeFeed for an epk range                                                    |
| [ChangeFeedIterator\ChangeFeedPartitionKey.js][changefeediterator_changefeedpartitionkey]                         | Demonstrates using a ChangeFeed for a partition key                                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] and the following Azure resources to run these sample programs:

- [Azure Cosmos DB account][createinstance_azurecosmosdbaccount]

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node AADAuth.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env COSMOS_KEY="<cosmos key>" COSMOS_ENDPOINT="<cosmos endpoint>" COSMOS_CONTAINER="<cosmos container>" node AADAuth.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[aadauth]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/AADAuth.js
[alterquerythroughput]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/AlterQueryThroughput.js
[bulk]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/Bulk.js
[bulkupdatewithsproc]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/BulkUpdateWithSproc.js
[changefeed]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ChangeFeed.js
[containermanagement]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ContainerManagement.js
[databasemanagement]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/DatabaseManagement.js
[diagnostics]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/Diagnostics.js
[hierarchicalpartitioning]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/HierarchicalPartitioning.js
[indexmanagement]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/IndexManagement.js
[itemmanagement]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ItemManagement.js
[querythroughput]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/QueryThroughput.js
[sastokenauth]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/SasTokenAuth.js
[serversidescripts]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ServerSideScripts.js
[changefeediterator_changefeedhierarchicalpartitionkey]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ChangeFeedIterator\ChangeFeedHierarchicalPartitionKey.js
[changefeediterator_changefeediteratorentirecontainer]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ChangeFeedIterator\ChangeFeedIteratorEntireContainer.js
[changefeediterator_changefeediteratorepkrange]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ChangeFeedIterator\ChangeFeedIteratorEpkRange.js
[changefeediterator_changefeedpartitionkey]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/cosmosdb/cosmos/samples/v3/javascript/ChangeFeedIterator\ChangeFeedPartitionKey.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/cosmos
[freesub]: https://azure.microsoft.com/free/
[createinstance_azurecosmosdbaccount]: https://docs.microsoft.com/azure/cosmos-db/how-to-manage-database-account#create-an-account
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/cosmosdb/cosmos/README.md
